# algorithms

./: setup.cfg
fundamentals/: counter.py  flips.py  sqrt.py
