[metadata]
name = algorithms
author = Matthias Westhues
license = MIT
long_description = file: README.rst
url = https://github.com/mwesthues/algorithms
requires-python = >=3.8
classifiers = 
    Development Status :: 0.1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python